# server/tools/browser/routes.ts
@@ -1,5 +1,13 @@
 import { Express } from "express";
-import { clearConsole, getDOM, goto, readConsole, readPage } from "./utils";
+import {
+  clearConsole,
+  evaluate,
+  getDOM,
+  goto,
+  log,
+  readConsole,
+  readPage,
+} from "./utils";
 
 export const addRoutes = (app: Express) => {
   app.post("/browser/goto", async (req, res) => {
@@ -9,20 +17,17 @@ export const addRoutes = (app: Express) => {
     }
     try {
       await goto(url);
-      res.send({
-        dom: await getDOM(),
-        console: readConsole(),
-      });
+      res.send(await readPage());
     } catch (error) {
-      res.status(500).json({ error: (error as Error).message });
+      res.status(500).json({ error: (error as Error).toString() });
     }
   });
 
   app.get("/browser/dom", async (req, res) => {
     try {
-      res.json({ dom: await getDOM() });
+      res.send(await getDOM());
     } catch (error) {
-      res.status(500).json({ error: (error as Error).message });
+      res.status(500).json({ error: (error as Error).toString() });
     }
   });
 
@@ -30,7 +35,7 @@ export const addRoutes = (app: Express) => {
     try {
       res.json(await readPage());
     } catch (error) {
-      res.status(500).json({ error: (error as Error).message });
+      res.status(500).json({ error: (error as Error).toString() });
     }
   });
 
@@ -40,6 +45,19 @@ export const addRoutes = (app: Express) => {
 
   app.delete("/browser/console", async (req, res) => {
     clearConsole();
-    res.json({ console: readConsole() });
+    res.send(readConsole());
+  });
+
+  app.post("/browser/execute", async (req, res) => {
+    const { command, selector, value } = req.body;
+
+    try {
+      const result = await evaluate(command, selector, value);
+
+      res.status(200).json(result);
+    } catch (error) {
+      log("browser/execute", { error });
+      res.status(500).json({ error: (error as Error).toString() });
+    }
   });
 };
